# AgenticAI-Course

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basicchatbot.ipynb
